# wika-data

./: .gitignore  README.md  pyproject.toml
wikadata/: generate_release.py
wikadata/dictionaries/: README.md  collect_dictionaries.py
wikadata/dictionaries/gcide/: parser.py
wikadata/dictionaries/pinoy_dictionary/: parser.py  scraper.py
wikadata/freqlists/: README.md  parser.py
wikadata/phrasebooks/: README.md  collect_phrasebooks.py
wikadata/phrasebooks/wikivoyage/: parser.py  scraper.py
wikadata/phrasebooks/wikivoyage/scraped_data/: phrasebook_eng_ceb_331_2025-03-01.json  phrasebook_eng_hil_272_2025-03-01.json  phrasebook_eng_tgl_679_2025-03-01.json
wikadata/utils/: fetch_page.py  graceful_exit.py  logger.py  user_agents.py
wikadata/wordlists/: README.md  parser.py
