[project]
name = "wikadata"
version = "0.1.0"
description = "Philippine languages resources."
authors = [
    {name = "Andrian Lloyd Maagma",email = "110181829+andrianllmm@users.noreply.github.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "iso639-lang (>=2.6.0,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.15.0"
